--- a/08-Answer.Rmd
+++ b/08-Answer.Rmd
@@ -9,22 +9,35 @@ ggplot(data=housedata2, aes(x= yearchi, y=priceper,group=region,color=region)) +
   geom_line(size = 1)+
   scale_colour_hue(breaks=c( "London" ,"South East" ,"East of England" ,"South West","West Midlands","Yorkshire and The Humber","East Midlands","North West","North East") )+
   theme_bw()+
-  theme(axis.title = element_text(size=15), axis.text = element_text(size=13),strip.text = element_text(size=15),legend.text = element_text(size=11),legend.title = element_text(size=15))+
-  ylab(bquote("House price ( £/"~m^2 ~ ")"))+xlab("Year")+
+  theme(axis.title = element_text(size=15),
+        axis.text = element_text(size=13),
+        strip.text = element_text(size=15),
+        legend.text = element_text(size=11),
+        legend.title = element_text(size=15))+
+  ylab(bquote("House price ( £/"~m^2 ~ ")"))+
+  xlab("Year")+
   guides(color=guide_legend("Region")) +
-  scale_y_continuous(labels = scales::comma,)+scale_x_continuous(breaks =  c(2009,2010,2011,2012,2013,2014,2015,2016))
+  scale_y_continuous(labels = scales::comma,)+
+  scale_x_continuous(breaks =  c(2009,2010,2011,2012,2013,2014,2015,2016))
 ```
 <br>
 You also can change the legend label text by setting the labels using scale_colour_hue.
 ```{r,echo = FALSE}
 ggplot(data=housedata2, aes(x= yearchi, y=priceper,group=region,color=region)) +geom_point(size=1.8)+
   geom_line(size = 0.8)+
-  scale_colour_hue(breaks=c( "London" ,"South East" ,"East of England" ,"South West","West Midlands","Yorkshire and The Humber","East Midlands","North West","North East"),labels=c("LD","SE","EE","SW","WM","YH","EM","NW","NE") )+
+  scale_colour_hue(breaks=c( "London" ,"South East" ,"East of England" ,"South West","West Midlands","Yorkshire and The Humber","East Midlands","North West","North East"),
+                   labels=c("LD","SE","EE","SW","WM","YH","EM","NW","NE") )+
   theme_bw()+
-  theme(axis.title = element_text(size=15), axis.text = element_text(size=13),strip.text = element_text(size=15),legend.text = element_text(size=11),legend.title = element_text(size=15))+
-  ylab(bquote("House price ( £/"~m^2 ~ ")"))+xlab("Year")+
+  theme(axis.title = element_text(size=15), 
+        axis.text = element_text(size=13),
+        strip.text = element_text(size=15),
+        legend.text = element_text(size=11),
+        legend.title = element_text(size=15))+
+  ylab(bquote("House price ( £/"~m^2 ~ ")"))+
+  xlab("Year")+
   guides(color=guide_legend("Region")) +
-  scale_y_continuous(labels = scales::comma,)+scale_x_continuous(breaks = c(2009,2010,2011,2012,2013,2014,2015,2016))
+  scale_y_continuous(labels = scales::comma,)+
+  scale_x_continuous(breaks = c(2009,2010,2011,2012,2013,2014,2015,2016))
 ```
 <br>
 Below is the answer to challenge 2:
@@ -46,7 +59,7 @@ ggplot(data=result1,aes(x=yearchi, y=ranknew,group=region,color=region))+
              size = 5,
              label.padding = unit(0.00, "lines"), 
              label.size = 0.0)+
-  theme_bw()+ scale_x_continuous(limits = c(2007, 2018),breaks = c(2009,2010,2011,2012,2013,2014,2015,2016))+
+  theme_bw()+ scale_x_continuous(limits = c(2007, 2021),breaks = c(2009,2010,2011,2012,2013,2014,2015,2016))+
   scale_y_reverse( breaks = unique(result1$ranknew))+
   theme(legend.position = "none",axis.text = element_text(size=13))+
   theme(axis.line=element_blank(),
