--- a/08-Answer.Rmd
+++ b/08-Answer.Rmd
@@ -4,7 +4,7 @@ I will release the answer in 5 mins.
 <br>
 Below is the answer to challenge 1:
 
-```{r,echo = FALSE}
+```{r,echo = FALSE, fig.show='hide'}
 ggplot(data=housedata2, aes(x= yearchi, y=priceper,group=region,color=region)) +geom_point(size=2)+
   geom_line(size = 1)+
   scale_colour_hue(breaks=c( "London" ,"South East" ,"East of England" ,"South West","West Midlands","Yorkshire and The Humber","East Midlands","North West","North East") )+
@@ -22,7 +22,7 @@ ggplot(data=housedata2, aes(x= yearchi, y=priceper,group=region,color=region)) +
 ```
 <br>
 You also can change the legend label text by setting the labels using scale_colour_hue.
-```{r,echo = FALSE}
+```{r,echo = FALSE, fig.show='hide'}
 ggplot(data=housedata2, aes(x= yearchi, y=priceper,group=region,color=region)) +geom_point(size=1.8)+
   geom_line(size = 0.8)+
   scale_colour_hue(breaks=c( "London" ,"South East" ,"East of England" ,"South West","West Midlands","Yorkshire and The Humber","East Midlands","North West","North East"),
@@ -41,7 +41,7 @@ ggplot(data=housedata2, aes(x= yearchi, y=priceper,group=region,color=region)) +
 ```
 <br>
 Below is the answer to challenge 2:
-```{r,echo = FALSE}
+```{r,echo = FALSE, fig.show='hide'}
 ggplot(data=result1,aes(x=yearchi, y=ranknew,group=region,color=region))+
   geom_line(aes(color = region, alpha = 1), size = 0.7) +
   geom_point(data = result1[(result1$yearchi == "2009"|result1$yearchi == "2016"),],
@@ -67,7 +67,6 @@ ggplot(data=result1,aes(x=yearchi, y=ranknew,group=region,color=region))+
       axis.ticks=element_blank(),
       axis.title.x=element_blank(),
       axis.title.y=element_blank(),
-      legend.position="none",
       panel.background=element_blank(),
       panel.border=element_blank(),
       panel.grid.major.y = element_blank(),
@@ -75,6 +74,42 @@ ggplot(data=result1,aes(x=yearchi, y=ranknew,group=region,color=region))+
       panel.grid.minor.y=element_blank(),
       plot.background=element_blank())+
   scale_colour_manual(values=c("#238443", "#252525","#252525", "#252525","#d95f0e", "#252525","#252525", "#252525","#d95f0e"))  
-  
+
+## A more efficient approach
+cols <- c("East Midlands" = "#238443","East of England" = "#252525","North East" = "#252525","London" = "#252525","South East" = "#252525","West Midlands" = "#252525","South West" = "#252525", "Yorkshire and The Humber" = "#d95f0e", "North West" = "#d95f0e")
+
+ggplot(data=result1,aes(x=yearchi, y=ranknew,group=region,color=region))+
+  geom_line(aes(color = region, alpha = 1), size = 0.7) +
+  geom_point(data = result1[(result1$yearchi == "2009"|result1$yearchi == "2016"),],
+             aes(x=yearchi, y=ranknew,group=region,color = region),
+             size = 8)+
+  geom_text(data = result1[result1$yearchi == "2016",], 
+            aes(label = region) , 
+            position = position_nudge(x = 0.4),
+            hjust = 0,
+            size = 5) +
+  geom_label(data = result1[(result1$yearchi == "2009"|result1$yearchi == "2016"),],
+             aes(label = ranknew), 
+             color="white",
+             alpha = 0,
+             size = 5,
+             label.padding = unit(0.00, "lines"), 
+             label.size = 0.0)+
+  theme_bw()+ scale_x_continuous(limits = c(2007, 2021),breaks = c(2009,2010,2011,2012,2013,2014,2015,2016))+
+  scale_y_reverse( breaks = unique(result1$ranknew))+
+  theme(legend.position = "none",axis.text = element_text(size=13))+
+  theme(axis.line=element_blank(),
+      axis.text.y=element_blank(),
+      axis.ticks=element_blank(),
+      axis.title.x=element_blank(),
+      axis.title.y=element_blank(),
+      panel.background=element_blank(),
+      panel.border=element_blank(),
+      panel.grid.major.y = element_blank(),
+      panel.grid.minor.x=element_blank(),
+      panel.grid.minor.y=element_blank(),
+      plot.background=element_blank())+
+  scale_colour_manual(values = cols)  
+
 ```
 
